--- a/gb/21/11/25/n13398917.md
+++ b/gb/21/11/25/n13398917.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jigfnv3721/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jigfnv3721/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jigfnv3721/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jigfnv3721/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jigfnv3721/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【新闻看点】所罗门爆冲突 中国城遭抢劫探因</h2>
-<a href="https://d2gp1icp8dv5pn.cloudfront.net/J6rXgcRwq"><img width="600" src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d1qri8o0k49d18.cloudfront.net/L3gXgcRws"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>所罗门爆冲突，华人成攻击对象；国际挖角是祸因，撒币外交制造分裂。（《新闻看点》提供）
 </h6>
 <hr>
-	<p>【大纪元2021年11月26日讯】大家好，欢迎大家关注《<ahref=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/J6rXgcRwq"><img width="600" src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》，我是李沐阳。今天是美东时间11月25日（星期四），亚洲时间是11月26日（星期五）。</p>
+	<p>【大纪元2021年11月26日讯】大家好，欢迎大家关注《<ahref=""></a><a href="https://d1qri8o0k49d18.cloudfront.net/L3gXgcRws"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》，我是李沐阳。今天是美东时间11月25日（星期四），亚洲时间是11月26日（星期五）。</p>
 <p>今天焦点：“红绿灯”亮了，欧洲或更强硬抗共；所罗门爆冲突，华人成攻击对象；国际挖角是祸因，撒币外交制造分裂；回应网友来信：为何做道士？82年杳无音讯，二战化石老人重逢。</p>
 <h2>60秒新闻</h2>
 <p>25日上午8点35分左右，俄罗斯西伯利亚一个煤矿矿坑起火并引发爆炸。目前已知至少11人死亡，45人受伤，还有46人被困在矿坑。因担心可能还有爆炸风险，救难行动暂缓，受困人员情况不明。</p>
@@ -14,20 +14,20 @@
 <p>国际刑警组织25日在推特宣布，阿联酋将军艾哈迈德?纳赛尔-莱西当选国际刑警组织主席，任期四年。中共公安部国际合作局副局长胡彬郴当选亚洲地区执委，任期3年。</p>
 <p>《悉尼先驱晨报》25日报导，在澳大利亚国会舆论的压力下，政府正在考虑对北京冬奥会进行外交抵制，并倾向于和其它志同道合的国家协调行动。报导引述匿名消息表示，澳洲政府正等待美国的决定。</p>
 <p>截止到美东时间11月25日下午1点，全球新增确诊中共病毒（武汉病毒、新冠病毒）人数68万4,743人，总确诊人数达到了2亿5,969万9,497人；单日死亡8,896人，累积死亡总数是519万1,762人。</p>
-<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/J6rXgcRwq"><img width="600" src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/IWA8MiTDemA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d1qri8o0k49d18.cloudfront.net/L3gXgcRws"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/IWA8MiTDemA?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 	</div>
 <p>下面进入今天的话题。</p>
-<p>今天是感恩节，大家过得开心吗？我有点不开心，因为YouTube的做法，太让人无语了。最近一个阶段，具体多长时间我不记得，但至少也有20天了。我们的节目只要上传，不论什么内容，统统黄标。这不仅影响我们的收入，也严重阻碍了人们接触《<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》。</p>
+<p>今天是感恩节，大家过得开心吗？我有点不开心，因为YouTube的做法，太让人无语了。最近一个阶段，具体多长时间我不记得，但至少也有20天了。我们的节目只要上传，不论什么内容，统统黄标。这不仅影响我们的收入，也严重阻碍了人们接触《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》。</p>
 <p>我们一直从自身找原因，是不是触及到了某些人的痛点，是不是涉及到了敏感话题，是不是踩到了禁区，反正我们是不断找自己的问题。我们在努力回避，但都于事无补。</p>
-<p>我们问过一些自媒体朋友，发现谈同样的话题，只有《<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》被黄标，别人都正常。这就让我们不理解了，难道《新闻看点》被老大哥盯上了吗？被魔鬼做了手脚吗？</p>
+<p>我们问过一些自媒体朋友，发现谈同样的话题，只有《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E7%9C%8B%E7%82%B9.md#1">新闻看点</a>》被黄标，别人都正常。这就让我们不理解了，难道《新闻看点》被老大哥盯上了吗？被魔鬼做了手脚吗？</p>
 <p>我们跟YouTube进行了电邮联系，想了解究竟原因是什么。我们得到的回复大概意思就是“遵守内容守则”之类的，非常冠冕堂皇。</p>
-<p>可是我们远的不说，就说昨天的节目，我们只有两个内容。前面是美国邀请<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>参加民主峰会和中共的反应。后面是中国人口的问题和中共为了增加人口准备人工授孕。没有任何敏感话题，也没有敏感字符，但仍然被黄标。</p>
+<p>可是我们远的不说，就说昨天的节目，我们只有两个内容。前面是美国邀请<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>参加民主峰会和中共的反应。后面是中国人口的问题和中共为了增加人口准备人工授孕。没有任何敏感话题，也没有敏感字符，但仍然被黄标。</p>
 <p>另外还有一个现象，我们几乎天天都申诉。但是YouTube反应都非常迟钝，等我们的流量高峰过去了，才可能给变绿。我不明白，一个美国企业，为什么做法越来越像中共？</p>
 <p>我们一直都在强调一个问题，大量的事实证明，现在是天灭中共的时候。我们所做的一切，都是为了唤醒一些看不清中共的人，希望他们远离中共，远离魔鬼。</p>
 <p>说白了，我们就是在利用这个平台救人。不管通过什么样的方式，能接触到《新闻看点》的人，我想都是有缘人，都是值得、也非常必要了解真相的人。我只想提醒思考一下，阻挡救人意味着什么呢？</p>
 <p>不多说了，在这个看似魔鬼当道、纷繁杂乱的世间，其实有一条主线从来没有变过。至于这条主线是什么，我在今天的节目结尾处，回应一位网友的来信，顺便说出这条主线。</p>
-<h2>德国三党政府强调抗共 <ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%AF%B9%E5%8F%B0%E6%88%98%E7%95%A5.md#1">对台战略</a>很强硬</h2>
-<p>今天（25日），中共又向德国新政府“警告”了。声称<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>、南海、新疆、香港等问题都是中共的“内部事务”，事关主权和领土完整。要求德国“恪守一中政策”，维护双边关系。</p>
+<h2>德国三党政府强调抗共 <ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AF%B9%E5%8F%B0%E6%88%98%E7%95%A5.md#1">对台战略</a>很强硬</h2>
+<p>今天（25日），中共又向德国新政府“警告”了。声称<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE.md#1">台湾</a>、南海、新疆、香港等问题都是中共的“内部事务”，事关主权和领土完整。要求德国“恪守一中政策”，维护双边关系。</p>
 <p>中共外交部发言人赵立坚表示，明年是中德建交50周年，希望德国新政府“延续务实的对华政策”，把精力放在推动双方各领域的“务实合作”上。</p>
 <p>赵立坚的这番喊话，是因为德国在经过近2个月的谈判后，以中间偏左的社会民主党为首的3党联盟达成了筹组新政府的协议，将取代前总理默克尔所属保守派联盟领导的政府。</p>
 <p>因为社民党代表色是红色，自民党代表色是黄色，再加上绿党，德国新政府被昵称为“红绿灯联盟”。三党联盟组建政府，代表着默克尔领导16年的政府已经结束了，德国开启了一个新时代。</p>
@@ -46,7 +46,7 @@
 <p>而且更重要的是，德国的态度很可能将影响整个欧洲，中共最担心的就是这一点。</p>
 <h2>红绿灯亮了 欧洲将更强硬抗共</h2>
 <p>在今天（25日）三党联合记者会上，下个月将出任总理的肖尔茨幽默地说，“红绿灯亮了。”这位63岁的社民党人表示，“作为总理，我对红黄绿执政联盟的要求就像红绿灯一样，这个联合政府应为德国未来发展指明方向。”</p>
-<p>据知情三党谈判的人士向《纽约时报》透露，组阁成功的一大关键让步，是由自民党党魁林德纳出掌财政部。林德纳是财政保守派，排除了增税的可能。《<ahref=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/J6rXgcRwq"><img width="600" src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》</p>
+<p>据知情三党谈判的人士向《纽约时报》透露，组阁成功的一大关键让步，是由自民党党魁林德纳出掌财政部。林德纳是财政保守派，排除了增税的可能。《<ahref=""></a><a href="https://d1qri8o0k49d18.cloudfront.net/L3gXgcRws"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》</p>
 <p>而绿党拿到了两个关键部会，一个是哈伯克将出任经济能源部长一职，另一个是绿党主席贝尔伯克将成为德国史上第一位女外长。</p>
 <p>值得一提的是德国政坛的后起之秀贝尔伯克，今年只有40岁，她直言不讳的作风尤其受到了年轻选民的欢迎。贝尔伯克经常批评前总理默克尔对北京太软弱，主张欧洲与中共的关系是“自由民主与独裁之间的制度竞争”，支持美欧联手制衡中共。</p>
 <p>绿灯本身就长年关注中国的西藏和新疆等人权问题，是欧洲政坛最关心中国人权的政党。所以贝尔伯克就任后，德国的外交将会更主动，以制衡独裁国家。</p>
@@ -56,8 +56,8 @@
 <p>《纽约时报》指出，德国领导人实际上是整个欧洲的领导者。</p>
 <p>也就是说，德国的施政战略将极大地带动欧洲其它国家。如果三党联盟政府在未来转向更加亲美、更加抗共，那么我们很可能会看到，整个欧洲、至少是欧盟27国都将越来越反共抗共。这才是中共最担心、最不愿意发生的事情。</p>
 <h2>所罗门爆发冲突 华人成攻击目标</h2>
-<p>接下来我们再关注一下南太平洋岛国所罗门的局势。今天（25日），澳大利亚已经派出了警力进入所罗门，帮助维持岛内安全。澳洲总理莫里森表示，澳大利亚“无意干预<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B.md#1">所罗门群岛</a>内的内部事务”，只是应所罗门总理索加瓦雷的请求。</p>
-<p>当地媒体《<ahref="https://github.com/jigfnv3721/djy/blob/master/gb/tag/%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B.md#1">所罗门群岛</a>先驱报》昨天（24日）报导，所罗门首都霍尼亚拉爆发了大型示威游行活动。在游行活动后，抗议者在霍尼亚拉的中国城抢劫和烧毁、破坏了一些商店，并向中国（中共）大使馆方向游行。</p>
+<p>接下来我们再关注一下南太平洋岛国所罗门的局势。今天（25日），澳大利亚已经派出了警力进入所罗门，帮助维持岛内安全。澳洲总理莫里森表示，澳大利亚“无意干预<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B.md#1">所罗门群岛</a>内的内部事务”，只是应所罗门总理索加瓦雷的请求。</p>
+<p>当地媒体《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B.md#1">所罗门群岛</a>先驱报》昨天（24日）报导，所罗门首都霍尼亚拉爆发了大型示威游行活动。在游行活动后，抗议者在霍尼亚拉的中国城抢劫和烧毁、破坏了一些商店，并向中国（中共）大使馆方向游行。</p>
 <p>报导表示，当地中共大使馆也发布声明，要求所罗门“采取一切必要措施”，保护中国企业和人员安全及合法权益。同时也向在所罗门的中国公民发出警告，减少不必要的外出。警方向抗议群众发射了催泪瓦斯，并实施了宵禁。</p>
 <p>大家一定感到奇怪，所罗门群岛的百姓抗议示威，为什么会殃及到唐人街？为什么华人又成为攻击的目标呢？究其原因，还是中共造的孽。</p>
 <p>事实上，中国城和华人在所罗门群岛受冲击，这已经不是第一次了。早在2006年，霍尼亚拉的大部分中国城被夷为平地，据称当时是因为与中共有关联恶企业操纵了当地的选举。</p>
@@ -118,48 +118,48 @@
 支持沐阳：<ahref="https://www.youlucky.biz/mu-yang-about">https://www.youlucky.biz/mu-yang-about</a><br />
 欢迎订阅＋按小铃铛：<ahref="http://bit.ly/SubscribeNewsInsight">bit.ly/SubscribeNewsInsight</a></p>
 <p>【免费下载电子书】：<ahref="https://www.youlucky.biz/ebook" target="_blank" rel="noopener noreferrer">https://www.youlucky.biz/ebook</a></p>
-<p>《<ahref=""></a><a href="https://d2gp1icp8dv5pn.cloudfront.net/J6rXgcRwq"><img width="600" src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》制作组</p>
+<p>《<ahref=""></a><a href="https://d1qri8o0k49d18.cloudfront.net/L3gXgcRws"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/c/%E5%A4%A7%E7%B4%80%E5%85%83-%E6%96%B0%E8%81%9E%E7%9C%8B%E9%BB%9E">新闻看点</a>》制作组</p>
 <p>责任编辑：李昊#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/18/n13384419.md#1">【新闻看点】CGTN自泄其丑 习近平或遇良机？</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/19/n13387139.md#1">【新闻看点】两亲信二十大助跑 习除最大威胁</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/22/n13391932.md#1">【新闻看点】彭帅与巴赫视频 五大疑点拷问真相</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13394061.md#1">【新闻看点】陈秋实遭封900年 中共危机感多强？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/18/n13384419.md#1">【新闻看点】CGTN自泄其丑 习近平或遇良机？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/19/n13387139.md#1">【新闻看点】两亲信二十大助跑 习除最大威胁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/22/n13391932.md#1">【新闻看点】彭帅与巴赫视频 五大疑点拷问真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/23/n13394061.md#1">【新闻看点】陈秋实遭封900年 中共危机感多强？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/9/n11709371.md#1" target="_blank">袁斌：汉学家林培瑞认清中共谎言的觉醒之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/19/n13386805.md#1">【未解之谜】外星人访谈录（3）监狱地球</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/19/n13386938.md#1">【百年真相】80岁被逼扫街 梁启超夫人文革受辱</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/21/n13389103.md#1">“缘分”到底是怎么回事？</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/21/n13389220.md#1">名噪一时 南宋一算命先生占卜奇准</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/20/n13388351.md#1">【舞蹈三剑客】神韵演员如何保持良好体态</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/26/n13399304.md#1">何良懋：港府力推立法会选举 港民冷待</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/25/n13398588.md#1">【财商天下】多国释战备储油 油价或不跌反升</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/24/n13396382.md#1">【探索时分】歼10击落F22？盘点四大军事假新闻</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/24/n13396309.md#1">中国水域90%船只讯号消失 专家：个资法作祟</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13394282.md#1">刘嘉玲晒与家人合照 梁朝伟被指撞脸齐秦</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13393781.md#1">【财商天下】张高丽带头反习 或成丑闻引爆点</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13394282.md#1">刘嘉玲晒与家人合照 梁朝伟被指撞脸齐秦</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/25/n13397948.md#1">林依晨产后首亮相 身形恢复神速气色佳</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/24/n13396343.md#1">林志玲遭陆综欠薪4年 终追回400万人民币</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13394062.md#1">昆凌惊爆头部撞伤 紧急取消隔日行程</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13394146.md#1">李冰冰微博发长文 自曝身体出问题</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/24/n13395285.md#1">美国离奇车祸 SUV把SUV撞飞到SUV上</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13392978.md#1">冬天好发心肌梗塞、猝死 出现3种症状警惕</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/25/n13398250.md#1">少盐少糖可能是错的？4个常见的饮食误区</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/23/n13392900.md#1">家里冰箱也会“生病”？这些信号一定要注意</a></li>
-<li><a href="https://github.com/jigfnv3721/djy/blob/master/gb/21/11/19/n13385678.md#1">油锅起火不是用水灭火 厨房6大安全须知</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jigfnv3721/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/25/n13398917.htm">【新闻看点】所罗门爆冲突 中国城遭抢劫探因</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/25/n13398917.htm">【新闻看点】所罗门爆冲突 中国城遭抢劫探因</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jigfnv3721/djy/blob/master/gb/21/11/25/n13398917.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jigfnv3721/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jigfnv3721/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jigfnv3721/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jigfnv3721/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/11/25/n13398917.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
